Bug #8, Accessibility fixes - colour contrast [iet:10308781][ci skip]
* `pa11y-ci` testing

--- a/style/ouop-styles.less
+++ b/style/ouop-styles.less
@@ -8,6 +8,15 @@
 
 body {
   background-color: #f9f9f9;
+
+  // Accessibility: colour contrast [a11y].
+  a {
+    color: #0080a7; // #00acdf;
+  }
+
+  .sr-only {
+    background: #fff;
+  }
 }
 
 .alert {
